--- a/src/components/MatchCard/index.css
+++ b/src/components/MatchCard/index.css
@@ -4,8 +4,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: .8rem;
-    padding: 1.2rem .5rem;
+    gap: 0.8rem;
+    padding: 1.2rem 0.5rem;
     border-radius: 10px;
     border: none;
     color: white;
